--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "emotion": "^10.0.27",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll-to-bottom": "^4.0.0",
     "react-swipeable-views": "^0.14.0-alpha.0",
     "socket.io-client": "^2.3.0"
   },
