--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
   },
   "homepage": "https://github.com/Ats1999/j-Chat#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "socket.io": "^2.3.0"
   }
 }
