--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@toast-ui/react-editor": "^2.4.0",
     "axios": "^0.20.0",
     "emotion": "^10.0.27",
     "react": "^16.13.1",
